--- a/main.ipynb
+++ b/main.ipynb
@@ -2,25 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pymilvus import connections\n",
+    "# from pymilvus import connections\n",
     "\n",
-    "connections.connect(\"default\", host=\"localhost\", port=\"19530\")"
+    "# connections.connect(\"default\", host=\"localhost\", port=\"19530\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/root/project_v1/myenv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/root/RAG/myenv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
      "text": [
       "<>:29: SyntaxWarning: invalid escape sequence '\\.'\n",
       "<>:29: SyntaxWarning: invalid escape sequence '\\.'\n",
-      "/tmp/ipykernel_21475/2477426145.py:29: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "/tmp/ipykernel_11571/2477426145.py:29: SyntaxWarning: invalid escape sequence '\\.'\n",
       "  split_text = re.split('\\. ', text)\n"
      ]
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,13 +206,149 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_milvus.retrievers import MilvusCollectionHybridSearchRetriever\n",
+    "from langchain_milvus.utils.sparse import BM25SparseEmbedding\n",
+    "from pymilvus import (\n",
+    "    Collection,\n",
+    "    CollectionSchema,\n",
+    "    DataType,\n",
+    "    FieldSchema,\n",
+    "    WeightedRanker,\n",
+    "    connections\n",
+    ")\n",
+    "\n",
+    "CONNECTION_URI = \"http://localhost:19530\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sparse_embedding_func = BM25SparseEmbedding(corpus=chunked_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "connections.connect(uri=CONNECTION_URI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pk_field = \"doc_id\"\n",
+    "dense_field = \"dense_vector\"\n",
+    "sparse_field = \"sparse_vector\"\n",
+    "text_field = \"text\"\n",
+    "fields = [\n",
+    "    FieldSchema(\n",
+    "        name=pk_field,\n",
+    "        dtype=DataType.VARCHAR,\n",
+    "        is_primary=True,\n",
+    "        auto_id=True,\n",
+    "        max_length=100,\n",
+    "    ),\n",
+    "    FieldSchema(name=dense_field, dtype=DataType.FLOAT_VECTOR, dim=384),\n",
+    "    FieldSchema(name=sparse_field, dtype=DataType.SPARSE_FLOAT_VECTOR),\n",
+    "    FieldSchema(name=text_field, dtype=DataType.VARCHAR, max_length=65_535),\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
+    "schema = CollectionSchema(fields=fields, enable_dynamic_field=False)\n",
+    "collection = Collection(\n",
+    "    name=\"IntroductionToTheNovels\", schema=schema, consistency_level=\"Strong\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dense_index = {\"index_type\": \"FLAT\", \"metric_type\": \"IP\"}\n",
+    "collection.create_index(\"dense_vector\", dense_index)\n",
+    "sparse_index = {\"index_type\": \"SPARSE_INVERTED_INDEX\", \"metric_type\": \"IP\"}\n",
+    "collection.create_index(\"sparse_vector\", sparse_index)\n",
+    "collection.flush()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.embeddings.base import Embeddings\n",
     "from sentence_transformers import SentenceTransformer\n",
-    "model = SentenceTransformer('all-MiniLM-L6-v2')\n",
-    "embedding = model.encode(\"Ваш текст для преобразования\")"
+    "\n",
+    "class SentenceTransformerEmbeddings(Embeddings):\n",
+    "    def __init__(self, model_name=\"all-MiniLM-L6-v2\"):\n",
+    "        self.model = SentenceTransformer(model_name)\n",
+    "\n",
+    "    def embed_documents(self, documents):\n",
+    "        return self.model.encode(documents)\n",
+    "\n",
+    "    def embed_query(self, query):\n",
+    "        return self.model.encode([query])[0]\n",
+    "\n",
+    "# Создаем объект эмбеддингов\n",
+    "embeddings = SentenceTransformerEmbeddings()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "entities = []\n",
+    "for text in chunked_text:\n",
+    "    entity = {\n",
+    "        dense_field: embeddings.embed_documents([text])[0],\n",
+    "        sparse_field: sparse_embedding_func.embed_documents([text])[0],\n",
+    "        text_field: text,\n",
+    "    }\n",
+    "    entities.append(entity)\n",
+    "collection.insert(entities)\n",
+    "collection.load()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sparse_search_params = {\"metric_type\": \"IP\"}\n",
+    "dense_search_params = {\"metric_type\": \"IP\", \"params\": {}}\n",
+    "retriever = MilvusCollectionHybridSearchRetriever(\n",
+    "    collection=collection,\n",
+    "    rerank=WeightedRanker(0.5, 0.5),\n",
+    "    anns_fields=[dense_field, sparse_field],\n",
+    "    field_embeddings=[embeddings, sparse_embedding_func],\n",
+    "    field_search_params=[dense_search_params, sparse_search_params],\n",
+    "    top_k=5,\n",
+    "    text_field=text_field,\n",
+    ")"
    ]
   },
   {
@@ -221,97 +357,95 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "emdedds = []\n",
-    "for i in chunked_text:\n",
-    "    emdedds.append(model.encode(i))"
+    "def make_rag_prompt(query:str, relevant_passage:str) -> str:\n",
+    "    escaped = relevant_passage.replace(\"'\", \"\").replace('\"', \"\").replace(\"\\n\", \" \")\n",
+    "    prompt = f\"\"\"\n",
+    "    Human: You are a helpful and informative bot that answers questions using text from the passage below. \n",
+    "    Be sure to answer in a full sentence, exhaustively, including all relevant background information.\n",
+    "    However, you are speaking to a non-technical audience, so be sure to break down complex concepts and\n",
+    "    keep your tone friendly and accommodating.\n",
+    "    If the passage is not relevant to the answer, you can ignore it.\n",
+    "    Context is given between <context>.\n",
+    "    The question is given between </question>.\n",
+    "    Thank you!\n",
+    "\n",
+    "    <context>\n",
+    "    {escaped}\n",
+    "    </context>\n",
+    "\n",
+    "    <question>\n",
+    "    {query}\n",
+    "    </question>\n",
+    "\n",
+    "    Assistant:\n",
+    "    \"\"\"\n",
+    "\n",
+    "    return prompt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pymilvus import FieldSchema, CollectionSchema, DataType, Collection\n",
+    "def get_return_function(k: int=5, metric: str='IP') -> MilvusCollectionHybridSearchRetriever:\n",
+    "    sparse_search_params = {\"metric_type\": metric}\n",
+    "    dense_search_params = {\"metric_type\": metric, \"params\": {}}\n",
+    "    retriever = MilvusCollectionHybridSearchRetriever(\n",
+    "        collection=collection,\n",
+    "        rerank=WeightedRanker(0.5, 0.5),\n",
+    "        anns_fields=[dense_field, sparse_field],\n",
+    "        field_embeddings=[embeddings, sparse_embedding_func],\n",
+    "        field_search_params=[dense_search_params, sparse_search_params],\n",
+    "        top_k=k,\n",
+    "        text_field=text_field,\n",
+    "    )\n",
     "\n",
-    "# Определение полей\n",
-    "fields = [\n",
-    "    FieldSchema(name=\"id\", dtype=DataType.INT64, is_primary=True),\n",
-    "    FieldSchema(name=\"embedding\", dtype=DataType.FLOAT_VECTOR, dim=384),  # 128 - размерность вектора\n",
-    "    # FieldSchema(name=\"attribute\", dtype=DataType.INT64)  # Дополнительное поле для гибридного поиска\n",
-    "]\n",
-    "\n",
-    "# Создание схемы и коллекции\n",
-    "schema = CollectionSchema(fields, description=\"Vector database with hybrid search\")\n",
-    "collection = Collection(name=\"Collection_v4\", schema=schema)"
+    "    return retriever"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(insert count: 59, delete count: 0, upsert count: 0, timestamp: 453752223036080132, success count: 59, err count: 0"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "collection.insert([list(range(len(emdedds))), emdedds])"
+    "def get_gpt_model() -> genai.GenerativeModel:\n",
+    "    gemini_api_key = os.getenv(\"GEMINI_API_KEY\")\n",
+    "    if not gemini_api_key:\n",
+    "        raise ValueError(\"Gemini API Key not provided. Please provide GEMINI_API_KEY as an environment variable\")\n",
+    "    genai.configure(api_key=gemini_api_key)\n",
+    "    model = genai.GenerativeModel('gemini-pro')\n",
+    "\n",
+    "    return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(384,)"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# emdedds[0].shape"
+    "def generate_answer_promt(query:str, model: genai.GenerativeModel, collection:MilvusCollectionHybridSearchRetriever) -> str:\n",
+    "    similar_docs = collection.invoke(query)\n",
+    "    relevant_text = \". \".join([doc.page_content.capitalize() for doc in similar_docs])\n",
+    "\n",
+    "    prompt = make_rag_prompt(query=query, relevant_passage=relevant_text)\n",
+    "\n",
+    "    answer = model.generate_content(prompt)\n",
+    "    \n",
+    "    return answer.text"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 72,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Status(code=0, message=)"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Параметры индекса\n",
-    "index_params = {\n",
-    "    \"index_type\": \"IVF_FLAT\",  # Можно также использовать другие типы, например, \"IVF_SQ8\"\n",
-    "    \"metric_type\": \"L2\",       # Метрика расстояния, например, \"L2\" для евклидова расстояния\n",
-    "    \"params\": {\"nlist\": 384}    # Количество кластеров для поиска\n",
-    "}\n",
-    "\n",
-    "# Создание индекса\n",
-    "collection.create_index(field_name=\"embedding\", index_params=index_params)"
+    "retriever = get_return_function(k=3, metric='IP')\n",
+    "model = get_gpt_model()"
    ]
   },
   {
@@ -320,38 +454,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "collection.load()"
+    "query=\"What are the components of pain signals?\"\n",
+    "\n",
+    "answer = generate_answer_promt(query=query, model=model, collection=retriever)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Pain signals have two components: first pain and second pain. First pain is rapidly transmitted, highly localized, and often feels like a sharp prick. Second pain is much slower, poorly localized, and more intense, often described as burning.'"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "answer"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['the re - ceptors in the skin, the so called cutaneous receptors, tell us about temperature ( thermoreceptors ), pressure and sur - face texture ( mechano receptors ), and pain ( nociceptors )', 'the much slower, highly affec - tive component is called second pain or burning pain ; it is poorly localized and poorly tolerated', 'the rapidly transmit - ted signal, which often has high spatial resolution, is called first pain or cutaneous pricking pain', 'the free receptors or type 4 joint receptors are nociceptors', 'pain signals can be separated into individual compo - nents, corresponding to different types of nerve fibers used for transmitting these signals']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def get_relevant_passage(query: str, database: Collection, n_results: int, model: SentenceTransformer, text_list: list) -> List[str]:\n",
-    "    query_emb = model.encode(query)\n",
-    "    search_params = {\"metric_type\": \"L2\", \"params\": {\"nprobe\": 128}}\n",
-    "    results = database.search([query_emb], anns_field=\"embedding\", param=search_params, limit=n_results, output_fields=[\"embedding\", 'id'])[0][::-1]\n",
-    "    right_index = []\n",
-    "    for hit in results:\n",
-    "        right_index.append(hit.id) #or hit.entity.get('id')\n",
-    "    passage = [text_list[i] for i in right_index]\n",
-    "\n",
-    "    return passage\n",
-    "\n",
-    "#Example usage\n",
-    "query=\"What are the components of pain signals?\"\n",
-    "relevant_text = get_relevant_passage(query=query, database=collection, n_results=5, model=model, text_list=chunked_text)\n",
-    "print(relevant_text)"
+    "# collection.drop()"
    ]
   },
   {
@@ -407,28 +541,6 @@
     "# plt.title(f'{query}')\n",
     "# plt.show()\n",
     "# # plt.axis('off')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def make_rag_prompt(query:str, relevant_passage:str) -> str:\n",
-    "    escaped = relevant_passage.replace(\"'\", \"\").replace('\"', \"\").replace(\"\\n\", \" \")\n",
-    "    prompt = f\"\"\"You are a helpful and informative bot that answers questions using text from the reference passage included below. \\\n",
-    "    Be sure to respond in a complete sentence, being comprehensive, including all relevant background information. \\\n",
-    "    However, you are talking to a non-technical audience, so be sure to break down complicated concepts and \\\n",
-    "    strike a friendly and converstional tone. \\\n",
-    "    If the passage is irrelevant to the answer, you may ignore it.\n",
-    "    QUESTION: '{query}'\n",
-    "    PASSAGE: '{escaped}'\n",
-    "\n",
-    "    ANSWER:\n",
-    "    \"\"\"\n",
-    "\n",
-    "    return prompt"
    ]
   },
   {
